twitter kullanıcı adı düzeltme

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ related: Diğer Girdiler
 repository: ecylmz.github.com
 ribbon: GitHub'dayım
 title: Emre Can Yılmaz
-twitter: http://twitter.com/ecylmz
+twitter: http://twitter.com/emrecanylmz
 
 navigator:
         0: Teknik Olmayan Yazılar
