--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ feed: http://feeds.feedburner.com/ecylmz
 flickr: http://flickr.com/photos/ecylmz
 google: ~
 googleanalyticsid: UA-17317907-1
+domain: ecylmz.com
 googleplus: https://plus.google.com/104216591877418020240
 gpg: 3FD25C84
 homeurl: http://ecylmz.com
