linkedin bağlantısını ekle

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ repository: ecylmz.github.com
 ribbon: GitHub'dayım
 title: Emre Can Yılmaz
 twitter: http://twitter.com/ecylmz
+linkedin: 104352226
 
 navigator:
         0: Teknik Olmayan Yazılar
